--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,9 @@ version: 2
 jobs:
   build:
     docker:
-    # Use the same Docker base as the project
+      # Use the same Docker base as the project
       - image: python:3.7.3-stretch
-    
-    working_directory: ~/repo/project-ml-microservice-kubernetes
-    
+    working_directory: ~/repo
     steps:
       - checkout
       # Download and cache dependencies
@@ -27,15 +25,14 @@ jobs:
             make install
             # Install hadolint
             wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
-                chmod +x /bin/hadolint
+            chmod +x /bin/hadolint
       - save_cache:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
-      # run lint!s
+      # run lint!
       - run:
           name: run lint
           command: |
             . venv/bin/activate
             make lint
-
