--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,14 @@
+# Python CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-python/ for more details
+#
 version: 2
 jobs:
   build:
     docker:
     # Use the same Docker base as the project
-      - image: circleci/python:3.7.3
-
-    working_directory: ~/repo
-
+      - image: python:3.7.3-stretch
+    # working_directory: ~/repo
     steps:
       - checkout
       # Download and cache dependencies
@@ -21,15 +23,17 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             make install
-            
+            # Install hadolint
+            wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
+                chmod +x /bin/hadolint
       - save_cache:
-          paths: [./venv]
+          paths:
+            - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
-
-      # run lint!
+      # run lint!s
       - run:
           name: run lint
           command: |
             . venv/bin/activate
-            make lint 
+            make lint
 
